# name: test_attach_group_transform[many]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'doc_0',
      'primary_group': GroupMinimal(id='bf1b993c', name='musicians'),
    },
    <class 'dict'> {
      '_id': 'doc_1',
      'primary_group': GroupMinimal(id='fb085f7f', name='hydrogeologists'),
    },
    <class 'dict'> {
      '_id': 'doc_2',
      'primary_group': GroupMinimal(id='7cf872dc', name='architects'),
    },
  ]
---
# name: test_attach_group_transform[none]
  <class 'dict'> {
    '_id': 'doc_0',
    'primary_group': None,
  }
---
# name: test_attach_group_transform[one]
  <class 'dict'> {
    '_id': 'doc_0',
    'primary_group': GroupMinimal(id='bf1b993c', name='musicians'),
  }
---
# name: test_attach_groups_transform[many]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'doc_0',
      'groups': <class 'list'> [
        GroupMinimal(id='3cbb22cc', name='secretary/administrators'),
        GroupMinimal(id='bf1b993c', name='musicians'),
        GroupMinimal(id='da42dca3', name='orthoptists'),
      ],
      'primary_group': GroupMinimal(id='bf1b993c', name='musicians'),
    },
    <class 'dict'> {
      '_id': 'doc_1',
      'groups': <class 'list'> [
        GroupMinimal(id='09d01419', name='dietitians'),
        GroupMinimal(id='f60bae36', name='contractors'),
        GroupMinimal(id='fb085f7f', name='hydrogeologists'),
      ],
      'primary_group': GroupMinimal(id='fb085f7f', name='hydrogeologists'),
    },
    <class 'dict'> {
      '_id': 'doc_2',
      'groups': <class 'list'> [
        GroupMinimal(id='153ff459', name='haematologists'),
        GroupMinimal(id='7aa59bf4', name='firefighters'),
        GroupMinimal(id='7cf872dc', name='architects'),
      ],
      'primary_group': GroupMinimal(id='7cf872dc', name='architects'),
    },
  ]
---
# name: test_attach_groups_transform[none]
  <class 'dict'> {
    '_id': 'doc',
    'groups': <class 'list'> [
    ],
    'primary_group': None,
  }
---
# name: test_attach_groups_transform[one]
  <class 'dict'> {
    '_id': 'doc',
    'groups': <class 'list'> [
      GroupMinimal(id='7cf872dc', name='architects'),
      GroupMinimal(id='bf1b993c', name='musicians'),
      GroupMinimal(id='fb085f7f', name='hydrogeologists'),
    ],
    'primary_group': GroupMinimal(id='bf1b993c', name='musicians'),
  }
---
